--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@ yarn-debug.log*
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
